# gameops-assistant

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/agents/: incident-classifier.md  log-investigator.md  metrics-analyst.md  postmortem-writer.md
.claude/skills/incident-response/: SKILL.md
.claude/skills/postmortem/: SKILL.md
docs/: 01-overview.md  02-mcp-servers.md  03-mock-data.md  04-agents-skills.md  05-testing.md  README.md
mcp_servers/: incident_db_server.py  log_search_server.py  metrics_server.py
mock_data/: metrics_generator.py  scenarios.py
mock_data/fixtures/: incident_ccu_spike.json  incident_error_spike.json  incident_queue_stuck.json  incident_zone_latency.json  normal.json
mock_data/generators/: incident.py
mock_data/generators/incident/: metrics_generator.py
mock_data/generators/incident_db/: records.py
mock_data/generators/logs/: entries.py
mock_data/generators/metrics/: incident.py  normal.py
tests/: test_incident_db.py  test_log_search.py  test_mcp_integration.py  test_metrics_generator.py  test_scenarios.py
